# backups

Lectures/: CMakeLists.txt  ПОВТОРИТЬ_ТЕМЫ.txt
Lectures/src/: CTAD.cpp  a.out  alignment_and_bit_fields.cpp  allocators.cpp  auto_keyword.cpp  constraints.cpp  decltype_keyword.cpp  devirtualization_launder.cpp  iterators.cpp  lambdas.cpp  main.cpp  manual_call_vptr.cpp  meta_basic_primitives_templtes.cpp  move_forward.cpp  new_overloading.cpp  optional.cpp  std_bind.cpp  std_function.cpp  std_list.cpp  std_map.cpp  std_tuple_and_structured_bindings.cpp  std_variant.cpp  stric_alising.cpp  string_view.cpp  templates_1.cpp  tests.cpp  tmp.cpp  type_erasure.cpp  vec_push_back.cpp
Lectures/src/smart_ptrs/: shared_ptr.cpp  unique_ptr.cpp
nvim/: lazy-lock.json
nvim/lua/: chadrc.lua  options.lua
nvim/lua/configs/: dap-ui.lua  lspconfig.lua  luasnip.lua
nvim/lua/plugins/: init.lua
nvim_old_config/lua/core/: mappings.lua
nvim_old_config/lua/plugins/configs/: others.lua
nvim_old_config/snippets/snipmate/: cpp.snippets
